# rust-ddb-get-api

./: README.md  samconfig.toml  template.yaml
get-by-id/: Cargo.toml
get-by-id/src/: main.rs
get-by-id/src/data/: models.rs  repositories.rs
